correction overflow latex

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -97,6 +97,12 @@
   margin: 0;
 }
 
+.katex-html {
+  word-wrap: break-word;      /* IE 5.5-7 */
+      white-space: -moz-pre-wrap; /* Firefox 1.0-2.0 */
+      white-space: pre-wrap;      /* current browsers */
+}
+
 @media (min-width:1250px) {
   .list_content {
     margin: 20px;
